--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -2394,7 +2394,6 @@ table tbody tr:hover {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
 }
 .z-button-icon .z-icon.delete {
   width: 1.5rem;
@@ -2405,7 +2404,6 @@ table tbody tr:hover {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
 }
 .z-button-icon .z-icon.edit {
   width: 1.5rem;
@@ -2416,7 +2414,6 @@ table tbody tr:hover {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
 }
 .z-button-icon .z-icon.popup {
   width: 1.5rem;
@@ -2427,7 +2424,16 @@ table tbody tr:hover {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
+}
+
+.z-button-list {
+  display: inline-flex;
+  vertical-align: middle;
+  position: relative;
+}
+.z-button-list .z-button:not(:last-child),
+.z-button-list .z-button-icon:not(:last-child) {
+  margin-right: 0.5rem;
 }
 
 .btn,
