--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -2290,7 +2290,6 @@ svg path.connector.hidden {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
 }
 .z-button-icon .z-icon.delete {
   width: 1.5rem;
@@ -2301,7 +2300,6 @@ svg path.connector.hidden {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
 }
 .z-button-icon .z-icon.edit {
   width: 1.5rem;
@@ -2312,7 +2310,6 @@ svg path.connector.hidden {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
 }
 .z-button-icon .z-icon.popup {
   width: 1.5rem;
@@ -2323,7 +2320,16 @@ svg path.connector.hidden {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
+}
+
+.z-button-list {
+  display: inline-flex;
+  vertical-align: middle;
+  position: relative;
+}
+.z-button-list .z-button:not(:last-child),
+.z-button-list .z-button-icon:not(:last-child) {
+  margin-right: 0.5rem;
 }
 
 .btn,
