--- a/src/main/resources/public/scss/template/mixins/_image.scss
+++ b/src/main/resources/public/scss/template/mixins/_image.scss
@@ -13,13 +13,9 @@
 
 // 아이콘
 // @include maskImage('#{$icon-folder-path}icon_close.svg', 0.875rem, 0.875rem, no-repeat, center, null, $notification-icon-color);
-@mixin maskImage($path, $width, $height, $repeat, $pos, $size, $color) {
-  @if ($width != null) {
-    width: $width;
-  }
-  @if ($height != null) {
-    height: $height;
-  }
+@mixin maskImage($path, $width: 1.5rem, $height: 1.5rem, $repeat, $pos, $size: null, $color: null) {
+  width: $width;  // 기본값 24px
+  height: $height; // 기본값 24px
   -webkit-mask-image: url($path);
   mask-image: url($path);
   -webkit-mask-repeat: if($repeat == null, no-repeat, $repeat);
@@ -30,5 +26,7 @@
     -webkit-mask-size: $size;
     mask-size: $size;
   }
-  background: $color;
+  @if ($color != null) {
+    background: $color;
+  }
 }
