--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="flex-column edit">
+    <div class="flex-column z-edit">
         <div class="custom-code-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{customCode.label.customCode}"></h1>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="custom-code-content-edit">
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="customCodeName">
                     <span th:text="#{customCode.label.name}"></span>
                     <span class="required"></span>
@@ -24,7 +24,7 @@
                 <input type="text" id="customCodeName" class="z-input" required="required" maxlength="110"
                        th:value="${customCode?.customCodeName}">
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label>
                     <span th:text="#{customCode.label.type}"></span>
                     <span class="required"></span>
@@ -49,7 +49,7 @@
             <!-- 타입: table-->
             <div id="type-table-container"
                  th:style="${customCode?.type == null || customCode?.type == 'table' ? '' : 'display: none'}">
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label>
                         <span th:text="#{customCode.label.targetTable}"></span>
                         <span class="required"></span>
@@ -62,21 +62,21 @@
                         </option>
                     </select>
                 </div>
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label for="searchColumn">
                         <span th:text="#{customCode.label.searchColumn}"></span>
                         <span class="required"></span>
                     </label>
                     <select id="searchColumn"></select>
                 </div>
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label for="valueColumn">
                         <span th:text="#{customCode.label.valueColumn}"></span>
                         <span class="required"></span>
                     </label>
                     <select id="valueColumn"></select>
                 </div>
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <div class="under-bar">
                         <label id="conditionLabel">
                             <span th:text="#{customCode.label.condition}"></span>
@@ -90,7 +90,7 @@
             </div>
             <!-- 타입: 코드 -->
             <div id="type-code-container" th:style="${customCode?.type == 'code' ? '' : 'display: none'}">
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label>
                         <span th:text="#{customCode.label.pCode}"></span>
                         <span class="required"></span>
@@ -99,17 +99,19 @@
                            th:disabled="${customCode?.pCode != null}">
                 </div>
             </div>
-            <div class="flex-row justify-content-end edit-row">
-                <div class="btn-list">
-                    <button class="point-fill" th:if="${customCode == null}" sec:authorize="hasAuthority('custom.code.create')"
+            <div class="flex-row justify-content-between z-edit-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
+                </div>
+                <div class="z-button-list">
+                    <button class="z-button primary" th:if="${customCode == null}" sec:authorize="hasAuthority('custom.code.create')"
                             onclick="actionCustomCode('post')" th:text="#{common.btn.register}"></button>
-                    <button class="point-fill" th:if="${customCode?.customCodeId}" sec:authorize="hasAuthority('custom.code.update')"
+                    <button class="z-button primary" th:if="${customCode?.customCodeId}" sec:authorize="hasAuthority('custom.code.update')"
                             th:disabled="${!customCode.enabled}" onclick="actionCustomCode('put')" th:text="#{common.btn.modify}">
                     </button>
-                    <button class="default-fill" th:if="${customCode?.customCodeId}" sec:authorize="hasAuthority('custom.code.delete')"
+                    <button class="z-button secondary" th:if="${customCode?.customCodeId}" sec:authorize="hasAuthority('custom.code.delete')"
                             th:disabled="${!customCode.enabled}" onclick="actionCustomCode('delete')" th:text="#{common.btn.delete}">
                     </button>
-                    <a class="btn default-line" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
         </div>
@@ -205,7 +207,7 @@
 
         function drawCondition(param) {
             const divRow = document.createElement('div');
-            divRow.classList.add('flex-row', 'edit-row');
+            divRow.classList.add('flex-row', 'z-edit-row');
 
             const keySelect = document.createElement('select');
             keySelect.classList.add('condition');
