--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -36,7 +36,7 @@
                 classes: 'thumbnail-preview',
                 buttons: [{
                     content: i18n.msg('common.btn.close'),
-                    classes: "default-line",
+                    classes: 'z-button secondary',
                     bindKey: false,
                     callback: function(modal) {
                         modal.hide();
