--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -46,9 +46,9 @@
                 </form>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="flex-row justify-content-end view-row">
-                <div class="btn-list">
-                    <a class="btn default-line" href="/notices/search" th:text="#{common.btn.list}"></a>
+            <div class="flex-row justify-content-start view-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/notices/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
         </div>
