--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -38,8 +38,10 @@
                 </form>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="view-btn-content flex-row justify-content-end">
-                <a class="btn default-line" href="/portals/downloads/search" th:text="#{common.btn.list}"></a>
+            <div class="view-btn-content flex-row justify-content-start">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/portals/downloads/search" th:text="#{common.btn.list}"></a>
+                </div>
             </div>
         </div>
     </div>
