--- a/src/main/resources/public/scss/template/_buttons.scss
+++ b/src/main/resources/public/scss/template/_buttons.scss
@@ -124,19 +124,32 @@
     display: inline-block;
     // 검색 아이콘
     &.search {
-      @include maskImage('#{$icon-folder-path}icon_search.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+      @include maskImage('#{$icon-folder-path}icon_search.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
     }
     // 삭제 아이콘
     &.delete {
-      @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+      @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
     }
     // 편집 아이콘
     &.edit {
-      @include maskImage('#{$icon-folder-path}icon_edit.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+      @include maskImage('#{$icon-folder-path}icon_edit.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
     }
     // 팝업 아이콘
     &.popup {
-      @include maskImage('#{$icon-folder-path}icon_popup.svg', 1.5rem, 1.5rem, no-repeat, center, null, $gray500); // 24px 24px
+      @include maskImage('#{$icon-folder-path}icon_popup.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+    }
+  }
+}
+// 버튼 목록
+.#{$common-prefix}button-list {
+  display: inline-flex;
+  vertical-align: middle;
+  position: relative;
+
+  .#{$common-prefix}button,
+  .#{$common-prefix}button-icon {
+    &:not(:last-child) {
+      margin-right: 0.5rem; // 8px
     }
   }
 }
