--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="flex-column edit">
+    <div class="flex-column z-edit">
         <div class="board-admin-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{board.label.board}"></h1>
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="board-admin-content-edit">
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="boardAdminTitle">
                     <span th:text="#{board.label.name}"></span>
                     <span class="required"></span>
@@ -23,7 +23,7 @@
                 <input type="text" class="z-input" id="boardAdminTitle" maxlength="70" th:value="${boardAdmin?.boardAdminTitle}"
                        required="required" disabled/>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label class="z-switch">
                     <span class="label" th:text="#{board.label.useYn}"></span>
                     <input type="checkbox" id="boardUseYn" name="boardUseYn"
@@ -31,18 +31,18 @@
                     <span></span>
                 </label>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label th:text="#{board.label.order}" for="boardAdminSort"></label>
                 <input class="z-input col-6" id="boardAdminSort" name="boardAdminSort" type="text"
                        th:value="${boardAdmin?.boardAdminSort}" maxlength="2"
                        onKeyup="this.value=this.value.replace(/[^0-9]/g,'');" disabled/>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label th:text="#{board.label.desc}" for="boardAdminDesc"></label>
                 <textarea id="boardAdminDesc" name="boardAdminDesc" class="z-textarea textarea-scroll-wrapper"
                           maxlength="2048" rows="7" th:text="${boardAdmin?.boardAdminDesc}" disabled></textarea>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label class="z-switch">
                     <span class="label" th:text="#{board.label.replyYn}"></span>
                     <input type="checkbox" id="replyYn" name="replyYn"
@@ -50,7 +50,7 @@
                     <span></span>
                 </label>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label class="z-switch">
                     <span class="label" th:text="#{board.label.commentYn}"></span>
                     <input type="checkbox" id="commentYn" name="commentYn"
@@ -58,7 +58,7 @@
                     <span></span>
                 </label>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label class="z-switch">
                     <span class="label" th:text="#{board.label.category}"></span>
                     <input type="checkbox" id="categoryYn" name="categoryYn"
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label class="z-switch">
                     <span class="label" th:text="#{board.label.attachFileYn}"></span>
                     <input type="checkbox" id="attachYn" name="attachYn"
@@ -99,14 +99,14 @@
                     <span></span>
                 </label>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label th:text="#{board.label.attachFileSize}" for="attachFileSize"></label>
                 <input class="z-input col-6 mb" id="attachFileSize" name="attachFileSize" type="text"
                        th:value="${boardAdmin?.attachFileSize}" maxlength="4" disabled/>
             </div>
-            <div class="flex-row justify-content-end edit-row">
-                <div class="btn-list">
-                    <a class="btn default-line" href="/boards/search" th:text="#{common.btn.list}"></a>
+            <div class="flex-row justify-content-start z-edit-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/boards/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
         </div>
