--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="flex-column edit">
+    <div class="flex-column z-edit">
         <div class="cmdb-attribute-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{cmdb.attribute.label.view}"></h1>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="cmdb-attribute-content-edit">
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="attributeName">
                     <span th:text="#{cmdb.attribute.label.name}"></span>
                     <span class="required"></span>
@@ -24,21 +24,21 @@
                 <input type="text" id="attributeName" class="z-input" required="required" maxlength="100"
                        th:value="${attribute?.attributeName}" disabled/>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="attributeDesc">
                     <span th:text="#{cmdb.attribute.label.description}"></span>
                 </label>
                 <textarea id="attributeDesc" name="attributeDesc" class="z-textarea textarea-scroll-wrapper"
                           maxlength="250" rows="5" th:text="${attribute?.attributeDesc}" disabled></textarea>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="attributeText">
                     <span th:text="#{cmdb.attribute.label.label}"></span>
                 </label>
                 <input type="text" id="attributeText" class="z-input" maxlength="100"
                        th:value="${attribute?.attributeText}" disabled/>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="attributeType">
                     <span th:text="#{cmdb.attribute.label.type}"></span>
                     <span class="required"></span>
@@ -46,7 +46,7 @@
                 <select id="attributeType" disabled>
                 </select>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <div class="under-bar">
                     <label>
                         <span th:text="#{cmdb.attribute.label.details}"></span>
@@ -55,9 +55,9 @@
                 </div>
                 <div id="details"></div>
             </div>
-            <div class="flex-row justify-content-end edit-row">
-                <div class="btn-list">
-                    <a class="btn default-line" href="/cmdb/attributes/search" th:text="#{common.btn.list}"></a>
+            <div class="flex-row justify-content-start z-edit-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/cmdb/attributes/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
         </div>
