--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -114,7 +114,7 @@
                                 classes: 'cmdb-ci-view-modal',
                                 buttons: [{
                                     content: i18n.msg('common.btn.close'),
-                                    classes: "default-line",
+                                    classes: 'z-button secondary',
                                     bindKey: false,
                                     callback: function (modal) {
                                         modal.hide();
