--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -74,15 +74,15 @@
             </div>
         </div>
         <div class="flex-row justify-content-end">
-            <div class="btn-list">
+            <div class="z-button-list">
                 <button sec:authorize="hasAuthority('cmdb.type.create')"
-                        class="point-fill" type="button" id="btnRegist" name="btnRegist"
+                        class="z-button primary" type="button" id="btnRegist" name="btnRegist"
                         th:onclick="|javascript:onSave('post')|" th:text="#{common.btn.register}"></button>
                 <button sec:authorize="hasAuthority('cmdb.type.update')"
-                        class="point-fill" type="button" id="btnUpdate" name="btnUpdate"
+                        class="z-button primary" type="button" id="btnUpdate" name="btnUpdate"
                         th:onclick="|javascript:onSave('put')|" th:text="#{common.btn.update}"></button>
                 <button sec:authorize="hasAuthority('cmdb.type.delete')"
-                        class="point-fill" type="button" id="btnDelete" name="btnDelete"
+                        class="z-button secondary" type="button" id="btnDelete" name="btnDelete"
                         th:onclick="|javascript:aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), onDelete)|" th:text="#{common.btn.delete}"></button>
             </div>
         </div>
