--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -35,9 +35,9 @@
                 </div>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="flex-row justify-content-end view-row">
-                <div class="btn-list">
-                    <a class="btn default-line" href="/faqs/search" th:text="#{common.btn.list}"></a>
+            <div class="flex-row justify-content-start view-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/faqs/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
         </div>
