--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="flex-column edit">
+    <div class="flex-column z-edit">
         <div class="scheduler-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{scheduler.label.schedule}"></h1>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="scheduler-content-edit">
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="taskName">
                     <span th:text="#{scheduler.label.name}"></span>
                     <span class="required"></span>
@@ -24,14 +24,14 @@
                 <input type="text" class="z-input" id="taskName" required="required" maxlength="100"
                        th:value="${schedule?.taskName}"/>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="taskDesc">
                     <span th:text="#{scheduler.label.description}"></span>
                 </label>
                 <textarea id="taskDesc" name="taskDesc" maxlength="250" rows="5"
                           class="z-textarea textarea-scroll-wrapper" th:text="${schedule?.taskDesc}"></textarea>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="taskStatus">
                     <span th:text="#{scheduler.label.status}"></span>
                     <span class="required"></span>
@@ -41,7 +41,7 @@
                     <option value="false" th:text="#{scheduler.status.false}" th:selected="false == ${schedule?.useYn}"></option>
                 </select>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="taskType">
                     <span th:text="#{scheduler.label.taskType}"></span>
                     <span class="required"></span>
@@ -57,7 +57,7 @@
             <!-- 타입: class -->
             <div id="type-class-container"
                  th:style="${schedule?.taskType == null || schedule?.taskType == 'class' ? '' : 'display: none'}">
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label>
                         <span th:text="#{scheduler.label.class}"></span>
                         <span class="required"></span>
@@ -65,7 +65,7 @@
                     <input type="text" class="z-input" id="executeClass" required="required" maxlength="100"
                            th:value="${schedule?.executeClass}"/>
                 </div>
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label>
                         <span th:text="#{scheduler.label.args}"></span>
                     </label>
@@ -74,14 +74,14 @@
             </div>
             <!-- 타입: jar -->
             <div id="type-jar-container" th:style="${schedule?.taskType == 'jar' ? '' : 'display: none'}">
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label>
                         <span th:text="#{scheduler.label.src}"></span>
                         <span class="required"></span>
                     </label>
                     <input type="text" class="z-input" id="src" maxlength="250" required="required" th:value="${schedule?.src}"/>
                 </div>
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label>
                         <span th:text="#{scheduler.label.command}"></span>
                         <span class="required"></span>
@@ -92,7 +92,7 @@
             </div>
             <!-- 타입: query -->
             <div id="type-query-container" th:style="${schedule?.taskType == 'query' ? '' : 'display: none'}">
-                <div class="flex-column edit-row">
+                <div class="flex-column z-edit-row">
                     <label for="executeQuery">
                         <span th:text="#{scheduler.label.query}"></span>
                         <span class="required"></span>
@@ -101,7 +101,7 @@
                               class="z-textarea textarea-scroll-wrapper" th:text="${schedule?.executeQuery}"></textarea>
                 </div>
             </div>
-            <div class="flex-column edit-row">
+            <div class="flex-column z-edit-row">
                 <label for="executeCycleType">
                     <span th:text="#{scheduler.label.executeCycleType}"></span>
                     <span class="required"></span>
@@ -114,7 +114,7 @@
                 </select>
             </div>
             <!-- executeCycleType: fixed_delay, fixed_rate -->
-            <div id="executeCycleType-cron-container" class="flex-column edit-row" th:style="${schedule?.executeCycleType == 'cron' ? '' : 'display: none'}">
+            <div id="executeCycleType-cron-container" class="flex-column z-edit-row" th:style="${schedule?.executeCycleType == 'cron' ? '' : 'display: none'}">
                 <label for="cronExpression">
                     <span th:text="#{scheduler.label.cronExpression}"></span>
                     <span class="required"></span>
@@ -122,7 +122,7 @@
                 <input type="text" class="z-input" id="cronExpression" required="required" maxlength="100"
                        th:value="${schedule?.cronExpression}"/>
             </div>
-            <div id="executeCycleType-fixed-container" class="flex-column edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
+            <div id="executeCycleType-fixed-container" class="flex-column z-edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
                 <label for="executeCyclePeriod">
                     <span th:text="#{scheduler.label.executeCyclePeriod}"></span>
                     <span class="required"></span>
@@ -130,21 +130,23 @@
                 <input type="text" class="z-input" id="executeCyclePeriod" required="required" maxlength="6"
                        th:value="${schedule?.executeCyclePeriod}" onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)"/>
             </div>
-            <div class="flex-row justify-content-end edit-row">
-                <div class="btn-list">
-                    <button class="point-fill" th:if="${schedule == null}" sec:authorize="hasAuthority('scheduler.create')"
+            <div class="flex-row justify-content-between z-edit-row">
+                <div class="z-button-list">
+                    <a class="z-button secondary" href="/schedulers/search" th:text="#{common.btn.list}"></a>
+                </div>
+                <div class="z-button-list">
+                    <button class="z-button primary" th:if="${schedule == null}" sec:authorize="hasAuthority('scheduler.create')"
                             onclick="actionScheduler('post')" th:text="#{common.btn.register}"></button>
-                    <button class="point-fill" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.update')"
+                    <button class="z-button primary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.update')"
                             th:disabled="${!schedule.editable}" onclick="actionScheduler('put')" th:text="#{common.btn.modify}">
                     </button>
-                    <button class="default-fill" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.delete')"
+                    <button class="z-button secondary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.delete')"
                             th:disabled="${!schedule.editable}" onclick="actionScheduler('delete')" th:text="#{common.btn.delete}">
                     </button>
-                    <button class="point-fill" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.execute')"
+                    <button class="z-button secondary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.execute')"
                             onclick="actionScheduler('execute')" th:text="#{scheduler.btn.immediatelyExecute}"></button>
-                    <button class="default-fill" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.read')"
+                    <button class="z-button secondary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.read')"
                             onclick="openHistoryViewModal()" th:text="#{scheduler.btn.history}"></button>
-                    <a class="btn default-line" href="/schedulers/search" th:text="#{common.btn.list}"></a>
                 </div>
             </div>
         </div>
@@ -205,7 +207,7 @@
                 body: `<div class="table-set" id="historyList"></div>`,
                 buttons: [{
                     content: i18n.msg('common.btn.close'),
-                    classes: 'default-line',
+                    classes: 'z-button secondary',
                     bindKey: false,
                     callback: function(modal) {
                         modal.hide();
